Added code to produce division result

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,9 +2,9 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "default-error-response-example"
+stack_name = "gateway-error-responses"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-s4bev8b7k3xe"
-s3_prefix = "default-error-response-example"
+s3_prefix = "gateway-error-responses"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
